tests/fail/reassignment-type.virtue
a i64 = 42
a = "what now"

# error: type error
#  --> test.virtue:2:5
#    |
#  2 | a = "what now"
#    |     ^^^^^^^^^^ expected i64, found string
#
